# codeforces-data-model

./: .gitignore  Cargo.toml  README.md
src/: data.tql  datadeleter.tql  dataloader.py  main.rs  problems.json  queries.tql  schema.tql
