[package]
name = "onboarding-project-cf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typedb-client = { path = "/Users/yashb/Desktop/Vaticle/onboarding-project-cf/typedb_client-cargo-workspace/typedb-client" }
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = { version = "1.0", default-features = false }
text_io = "0.1.12"

